--- a/jupyter_notebooks/ML Pipeline Preparation.ipynb
+++ b/jupyter_notebooks/ML Pipeline Preparation.ipynb
@@ -106028,7 +106028,8 @@
    "metadata": {},
    "source": [
     "### 6. Improve your model\n",
-    "Use grid search to find better parameters. "
+    "Use grid search to find better parameters. In this section I used \n",
+    "the Grid Search in order to optimize my model "
    ]
   },
   {
@@ -106444,6 +106445,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.3"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
